# hygg

./: .gitignore  .publish.sh  Cargo.toml  README.md  ci.sh
cli-epub-to-text/: Cargo.toml
cli-epub-to-text/src/: lib.rs  main.rs
cli-epub-to-text/tests/: debug_test.rs  edge_cases.rs  integration_tests.rs  real_files_test.rs
cli-justify/: Cargo.toml
cli-justify/src/: lib.rs  main.rs
cli-pdf-to-text/: Cargo.toml
cli-pdf-to-text/src/: lib.rs  main.rs
cli-pdf-to-text/tests/: cli_test.rs
cli-text-reader/: Cargo.toml
cli-text-reader-online/: Cargo.toml
cli-text-reader-online/src/: editor.rs  lib.rs  main.rs  server.rs
cli-text-reader/src/: bookmarks.rs  config.rs  core_state.rs  core_types.rs  debug.rs  demo_components.rs  demo_registry.rs  demo_script.rs  demo_tutorial_test.rs  editor.rs  help.rs  highlights.rs  highlights_core.rs  highlights_persistence.rs  interactive_tutorial.rs  interactive_tutorial_buffer.rs  interactive_tutorial_steps.rs  interactive_tutorial_tests.rs  interactive_tutorial_utils.rs  lib.rs  main.rs  progress.rs  tutorial.rs  utils.rs
cli-text-reader/src/demo_content/: marketing_content.rs  mod.rs
cli-text-reader/src/editor/: buffer.rs  buffer_overlay.rs  buffer_split.rs  buffer_state.rs  char_navigation.rs  command_execution.rs  command_execution_core.rs  command_execution_security.rs  command_mode.rs  command_translation.rs  commands.rs  commands_handlers.rs  commands_search.rs  core.rs  cursor.rs  demo_content.rs  demo_executor.rs  demo_renderer.rs  display.rs  display_init.rs  display_loop.rs  display_split.rs  event_handler.rs  highlighting.rs  highlighting_persistent.rs  highlighting_selection.rs  line_navigation.rs  mod.rs  movement.rs  navigation.rs  normal_control.rs  normal_mode.rs  normal_navigation.rs  normal_navigation_basic.rs  normal_navigation_find.rs  normal_navigation_jumps.rs  normal_search_visual.rs  page_navigation.rs  screen_position.rs  search_mode.rs  (+23 more)
cli-text-reader/src/utils/: tests.rs
docs/: README.md
docs/pages/: development.md  getting-started.md  online-client.md
hygg/: Cargo.toml
hygg-server/: Cargo.toml
hygg-server/src/: main.rs
hygg-server/test-data/: sample.txt
hygg/src/: main.rs
hygg/tests/: integration_test.rs
redirect-stderr/: Cargo.toml
test-data/: sample.txt
test-data/docx/: test-standard.docx
test-data/epub/: test-standard.epub
test-data/odf/: test.odt
