[package]
name = "cli-epub-to-text"
version = "0.1.15"
edition = "2024"
license = "AGPL-3.0"
readme = "../README.md"
repository = "https://github.com/kruserr/hygg"
description = "A CLI epub to plain text converter"
keywords = ["pdf", "cli", "parser", "terminal", "utility"]
categories = [
    "command-line-utilities",
    "parser-implementations",
    "text-processing",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
epub = "2.1.4"
html2text = "0.15"

[dev-dependencies]
tempfile = "3"
zip = "4"
