[package]
name = "cli-epub-to-text"
version.workspace = true
edition = "2024"
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "A CLI epub to plain text converter"
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
epub = "2.1.4"
html2text = "0.15"

[dev-dependencies]
tempfile = "3"
zip = "4"
