[package]
name = "cli-epub-to-text"
description = "A CLI epub to plain text converter"

version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
epub = "2.1.4"
html2text = "0.15"

[dev-dependencies]
tempfile = "3"
zip = "4"
