[package]
name = "cli-justify"
version.workspace = true
edition = "2024"
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "A CLI text justify tool"
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
getopts = "0.2"
