[package]
name = "cli-pdf-to-text"
description = "A CLI pdf to plain text converter"

version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
redirect-stderr = { version = "0.1", path = "../redirect-stderr" }

getopts = "0.2"

pdf-extract = "0.7"
lopdf = "0.35"

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2" }
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3" }

[dev-dependencies]
rayon = "1"
