[package]
name = "cli-text-reader-online"
version.workspace = true
edition = "2021"
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "A less like CLI text reader"
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
cli-justify = { version = "0.1", path = "../cli-justify" }

getopts = "0.2"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "2"
