[package]
name = "cli-text-reader"
description = "A less like CLI text reader"

version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
cli-justify = { version = "0.1", path = "../cli-justify" }

getopts = "0.2"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
arboard = "3"
ureq = { version = "3.0", features = ["json"] }
lazy_static = "1.5"

[dev-dependencies]
tempfile = "3"
