[package]
name = "hygg-server"
version.workspace = true
edition = "2021"
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "A less like CLI text reader"
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "uuid",
] }
anyhow = "1"
async-lock = "3"
