[package]
name = "hygg"
version.workspace = true
edition = "2024"
authors.workspace = true
default-run = "hygg"
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "Simplifying the way you read"
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
cli-pdf-to-text = { version = "0.1", path = "../cli-pdf-to-text" }
cli-epub-to-text = { version = "0.1", path = "../cli-epub-to-text" }
cli-justify = { version = "0.1", path = "../cli-justify" }
cli-text-reader = { version = "0.1", path = "../cli-text-reader" }
redirect-stderr = { version = "0.1", path = "../redirect-stderr" }

uuid = { version = "1", features = ["v4"] }
atty = "0.2"

clap = { version = "4.0", features = ["derive"] }
