[package]
name = "redirect-stderr"
version.workspace = true
edition = "2024"
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "A cross platform lib to redirect std-err"
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]

# redirect-stderr dependencies
[target.'cfg(unix)'.dependencies]
libc = { version = "0.2" }
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3" }
